--- a/src/components/Booking/booking.css
+++ b/src/components/Booking/booking.css
@@ -21,7 +21,7 @@ label {
     font-size: 12px;
     margin-bottom: 8px;
     line-height: 26px;
-    letter-spacing: 1px;    
+    letter-spacing: 1px;
     color: #1B1C21;
     font-family: "Raleway";
 }
@@ -77,7 +77,22 @@ label {
 
 @media (max-width: 1220px) {
     .booking-container {
-        width: 100%;
+        max-width: 1220px;
         padding: 0 10px;
+    }
+
+    .select-date {
+        width: 400px;
+    }
+
+}
+
+@media (max-width: 1024px) {
+    .select-date {
+        width: 300px;
+    }
+
+    .book-now-btn {
+        padding: 16px 35px;
     }
 }
