--- a/src/index.css
+++ b/src/index.css
@@ -458,6 +458,10 @@
   font-display: swap;
 }
 
+/* Import slick-carousel styles */
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
+
 body {
   margin: 0;
   
