--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -95,16 +95,14 @@ body {
 }
 
 .video-box {
-
     width: 100%;
-    height: 300px;
 }
 
 .our_info::before {
     content: "OUR STORY";
     position: absolute;
     top: 15%;
-    left: -179px;
+    left: -71px;
     transform: translateY(-50%);
     font-size: 200px;
     font-weight: 400;
@@ -118,8 +116,8 @@ body {
 .our_info::after {
     content: "ABOUT VILLA";
     position: absolute;
-    top: 50%;
-    left: 100px;
+    top: 52%;
+    right: -100px;
     transform: translateY(51%);
     font-size: 200px;
     font-weight: 400;
@@ -178,7 +176,7 @@ body {
     line-height: 26px;
     color: #666666;
     margin-bottom: 0px;
-    padding-bottom: 24px;
+    padding-bottom: 40px;
 }
 
 .right_col {
@@ -286,7 +284,6 @@ body {
 .option-title {
     font-size: 24px;
     font-weight: 400;
-    margin-bottom: 0px;
     line-height: 32px;
     font-family: 'GFS Didot';
 }
@@ -321,13 +318,13 @@ body {
 }
 
 .detail_resort::before {
-    background-image: url('../assets/image/detail_leaf1.svg');
+    background-image: url('../../assets/image/detail_leaf1.svg');
     top: -27px;
     left: 55%;
 }
 
 .detail_resort::after {
-    background-image: url('../assets/image/detail_leaf2.svg');
+    background-image: url('../../assets/image/detail_leaf2.svg');
     top: -35px;
     right: -50px;
 }
@@ -354,13 +351,13 @@ body {
 }
 
 .main_part::before {
-    background-image: url('../assets/image/detail_leaf3.svg');
+    background-image: url('../../assets/image/detail_leaf3.svg');
     bottom: -50px;
     left: -198px;
 }
 
 .main_part::after {
-    background-image: url('../assets/image/deatil_leaf4.svg');
+    background-image: url('../../assets/image/deatil_leaf4.svg');
     bottom: -50px;
     right: 19%;
 }
@@ -520,7 +517,7 @@ body {
     left: -16px;
     width: 135px;
     height: 100px;
-    background-image: url('../assets/image/leaf.png');
+    background-image: url('../../assets/image/leaf.png');
     /* Replace with actual background image */
     background-size: cover;
     background-repeat: no-repeat;
@@ -535,7 +532,7 @@ body {
     right: 0px;
     width: 200px;
     height: 328px;
-    background-image: url('../assets/image/black_leaf.png');
+    background-image: url('../../assets/image/black_leaf.png');
     /* Replace with actual background image */
     background-size: cover;
     background-repeat: no-repeat;
@@ -604,10 +601,10 @@ body {
     content: '';
     position: absolute;
     bottom: -82px;
-    width: 274px;
+    width: 150px;
     left: -42px;
-    height: 328px;
-    background-image: url('../assets/image/black_leaf2.png');
+    height: 163px;
+    background-image: url('../../assets/image/black_leaf2.png');
     /* Replace with actual background image */
     background-size: cover;
     background-repeat: no-repeat;
@@ -858,7 +855,7 @@ h3,
     position: absolute;
     top: 25px;
     left: 0;
-    background-image: url('../assets/image/esacpe_leaf.svg');
+    background-image: url('../../assets/image/esacpe_leaf.svg');
     width: 300px;
     height: 300px;
     background-repeat: no-repeat;
@@ -999,7 +996,6 @@ h3,
 
 .author-name {
     font-size: 18px;
-    font-weight: bold;
     margin: 0;
     margin-left: 100px;
     line-height: 26px;
@@ -1009,7 +1005,7 @@ h3,
 
 .author-title {
     font-size: 14px;
-    color: #555;
+    color: #1B1C21;
     margin-left: 100px;
     font-family: 'Inter';
     margin-top: 5px;
@@ -1027,8 +1023,10 @@ h3,
 }
 
 .testimonial-text p {
-    font-size: 16px;
-    line-height: 1.5;
+    font-size: 14px;
+    font-family: 'Raleway';
+    line-height: 20px;
+    font-style: italic;
     margin: 0;
 }
 
