--- a/src/components/SlickSlider/SlickSlider.css
+++ b/src/components/SlickSlider/SlickSlider.css
@@ -9,7 +9,14 @@
     background-color: #666;
     padding: 20px;
 }
+.home_slide .slider-container .slider-item {
+    background-color: #666;
+}
 
+.home_slide .slick-dots {
+    z-index: 1;
+    bottom: -20px !important;
+}
 .slider-item h2 {
     padding-top: 180px;
     font-family: 'GFS Didot';
